<resources>
    <string name="app_name">American Football Scorer</string>
    <string name="teama">Team A</string>
    <string name="teamb">Team B</string>
    <string name="score">0</string>
    <string name="touchdown">touchdown</string>
    <string name="fieldgoal">field goal</string>
    <string name="conversion">conversion</string>
    <string name="extrapoint">extra point</string>
    <string name="reset">reset</string>
</resources>
