<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fbfield"
        tools:ignore="ContentDescription" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                style="@style/AppTheme.textstyle1"
                android:text="@string/teama" />
            <TextView
                android:id="@+id/team_a_score"
                style="@style/AppTheme.textstyle2"
                android:text="@string/score" />
            <Button
                android:id="@+id/touchDownA"
                style="@style/AppTheme.buttonstyle"
                android:onClick="touchdownTeamA"
                android:text="@string/touchdown" />
            <Button
                android:id="@+id/fieldGoalA"
                style="@style/AppTheme.buttonstyle"
                android:onClick="fieldgoalTeamA"
                android:text="@string/fieldgoal" />
            <Button
                android:id="@+id/twoPointConA"
                style="@style/AppTheme.buttonstyle"
                android:onClick="conversionTeamA"
                android:text="@string/conversion" />
            <Button
                android:id="@+id/extraPointA"
                style="@style/AppTheme.buttonstyle"
                android:onClick="extraPointTeamA"
                android:text="@string/extrapoint" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:layout_width="10dp"
                android:layout_height="390dp"
                android:background="#000000" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                style="@style/AppTheme.textstyle1"
                android:text="@string/teamb" />
            <TextView
                android:id="@+id/team_b_score"
                style="@style/AppTheme.textstyle2"
                android:text="@string/score" />
            <Button
                android:id="@+id/touchDownB"
                style="@style/AppTheme.buttonstyle"
                android:onClick="touchdownTeamB"
                android:text="@string/touchdown" />
            <Button
                android:id="@+id/fieldGoalB"
                style="@style/AppTheme.buttonstyle"
                android:onClick="fieldgoalTeamB"
                android:text="@string/fieldgoal" />
            <Button
                android:id="@+id/twoPointConB"
                style="@style/AppTheme.buttonstyle"
                android:onClick="conversionTeamB"
                android:text="@string/conversion" />
            <Button
                android:id="@+id/extraPointB"
                style="@style/AppTheme.buttonstyle"
                android:onClick="extraPointTeamB"
                android:text="@string/extrapoint" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetScores"
        android:text="@string/reset"
        android:textColor="@color/pureWhite" />
</RelativeLayout>
